Replace finalize() with Cleaner in ScalableRWLock (#705)
#### Motivation:

`ScalableRWLock.ReadersEntry` uses `finalize()` to clean up reader state
when threads die. On JDK 25, where `finalize()` is deprecated for
removal (JEP 421), finalizer scheduling may be delayed or unreliable.
This can leave ghost reader entries with `SRWL_STATE_READING` state,
causing writers to spin forever in `exclusiveLock()`. This was
identified as the most likely root cause of the intermittent
`TransactionTest` hang on CI (JDK 25 oracle).

`java.lang.ref.Cleaner` (available since JDK 9, project requires JDK
21+) is the recommended replacement — it provides more predictable
cleanup timing and doesn't suffer from finalizer scheduling issues.

## Summary

- Replace `finalize()` in `ReadersEntry` with a static `Cleaner` and
`CleanupAction`
- `CleanupAction` captures only the lock and `AtomicInteger` state (not
the `ReadersEntry` itself) to avoid preventing GC
- Make `ReadersEntry` a `static` inner class (no longer needs outer
class reference)
- Add `ScalableRWLockTest` with tests for ghost reader cleanup after
thread death, basic read/write behavior, and
writer-blocks-while-reader-holds semantics

## Test plan

- [x] `ScalableRWLockTest` — 3 tests pass locally (ghost reader cleanup,
basic behavior, writer blocking)
- [x] All existing lock tests pass (`concur.lock.*`)
- [x] `YTDBStructureTest` — 920 tests pass (0 failures)
- [ ] CI pipeline passes without hangs on JDK 25